# trading_simulator

./: CMakeLists.txt
apps/cli/: CMakeLists.txt  main.cpp
include/tradeapp/engine/: logger.hpp  matchengine.hpp  orderbook.hpp  system.hpp
include/tradeapp/model/: enums.hpp  errors.hpp  events.hpp  order.hpp  trade.hpp  user.hpp
include/tradeapp/utils/: string.hpp  time.hpp
src/: CMakeLists.txt  old_order.txt  order.cpp
src/engine/: logger.cpp  matchengine.cpp  orderbook.cpp  system.cpp
src/model/: order.cpp  trade.cpp
